# prj

./: .gitignore  README.md
am/my/: MyFmt.sc  MyScript.sc
amm/my/: MyScript.sc  clb.sc  svn.sc
ansible/manjhome/: pb-adduser.yml  pb-conda.yml  pb-dbg.yml  pb-deps-conda.yml  pb-deps-pip.yml  pb-jdk.yml  pb-site-full.yml  pb-yum.yml  provis.sh  readme-users.txt  readme.txt  runcpsprod.sh  runihhome.sh
ant/: build.xml
ant/p1/: build.xml  ivysettings.xml
awk/awk-log-splitter/: awk-log-splitter.awk  log.txt  log2.txt
c/: a.c
c/kr1/: a.c  in.txt
ca/le/: 01-register.sh  02-get-cert-key.sh  03-get-cert-req.sh  04-authorize-domains.sh  05-verify-domains.sh  06-generate-cert.sh  07-export-pkcs12.sh  08-pkcs12-dump.sh  99-revoke-cert.sh  env-vars.sh
cabal/: .gitignore
cabal/husk/: b.bat  be.bat  husk.cabal  t.bat
cabal/husk/benchmark/: Bench.hs  HuskBench.hs
cabal/husk/executable/: Main.hs
cabal/husk/test-suite/: HuskSpec.hs
cabal/mdm-nsis/: mdm-nsis.cabal  r.bat  readme.txt  t.bat
cabal/mdm-nsis/Development/: NSIS.hs
cabal/mdm-nsis/src/: Main.hs
cabal/pipes-splitter/: a.txt  b.bat  pipes-splitter.cabal  t.bat
cabal/pipes-splitter/src/: Main.hs
cabal/pipes-trace/: b.bat  h.bat  pipes-trace.cabal  r.bat
cabal/pipes-trace/src/: Main.hs
cargo/: .gitignore
cargo/cli/clb/: Cargo.toml  e1.txt  e2.txt  i1.txt  i2.txt  input.txt
cargo/cli/clb/data/: hashtags.txt  mediaurl.txt  merged.txt  snippet.txt  title.txt  url.txt
cargo/cli/clb/sh/: run.sh
cargo/cli/clb/src/: args.rs  errors.rs  hbs.rs  main.rs  rest.rs  worker.rs
cargo/cli/clb/src/templates/: pmvd.hbs  prjCreate.hbs
cargo/cpsc/: cpsc.crs  lpschemes_dir
cargo/csv-normalize/: Cargo.toml
cargo/diesel_demo/: Cargo.toml
cargo/download-files/: Cargo.toml
cargo/echo-client/: Cargo.toml  e1.txt  e2.txt  e3.txt  input.txt  readme.txt
cargo/echo-server/: Cargo.toml
cargo/pgauth/: Cargo.toml
cargo/pug-sample/: prjCreate.pug
cargo/s1/: s1.rs
cargo/s2/: Cargo.toml  t.sh
cargo/script1/: a.crs
cargo/search-client/: Cargo.toml  input.txt
cargo/serde-demo/: Cargo.toml
cargo/simple/: Cargo.toml
cbtests/sentiment/: list.bat  res.json  s.bat  s.json
chef/cookbooks/: b1.sh  bn.sh  env-vars.sh
chef/environments/: local-iharh.rb
conan/zlib/: readme.txt
cpp/LockedList3/: LockedList.cpp  LockedList.vcxproj
cpp/clang/: c.bat  main.cpp
cpp/dbg/: build.sh  main.cpp
cpp/ktausuite/: Jamroot  p.bat  prepareProfileStarter.bat  readme.txt  t.bat
cpp/ogl1/: a.c  b.sh  glvnd.txt
docker/: .gitignore  b-dev-deb.sh
docker/arma/: Dockerfile  arma.txt  dbld.bat  dbld.sh  drun.bat  sums.txt
docker/clang/: Dockerfile  a.cpp  dbld.sh  drun.sh
docker/cld/: dgen.sh  env-vars.sh
docker/cmp/: env-vars.sh  readme.txt
docker/cps-py/: Dockerfile  cps-pip-requirements.txt  dbld.bat  dbld.sh  drun.bat  sums.txt
docker/dev/: b-cos.sh  b-deb.sh
docker/dev-deb/: Dockerfile
docker/eigen/: Dockerfile  a.cpp  dbld.sh  res-pd.txt
docker/eigenb/: Dockerfile  sums.txt  todo.txt
docker/fx/: Dockerfile  env-vars.sh  platform.properties
docker/jfasttext/: Dockerfile  dmvn.sh  image_build.sh
docker/netlib/: Dockerfile  netlib-privkey.asc  netlib-pubkey.asc  sums.txt
docker/ublas/: Dockerfile  a.cpp  dbld.sh  drun.sh
dotnet/helloworld/: Program.cs
dub/clb/: .gitignore  @u1.txt  ar1.txt  ar100.txt  bn1.txt  de1.txt  dub.sdl  dub.selections.json  en1.txt  en100.txt  en111.txt  en1802.txt  es1.txt  es100.txt  fr1.txt  hi1.txt  id100.txt  it1.txt  it100.txt  ja1.txt  ja100.txt  ja39.txt  ja6.txt  ja61.txt  ko1.txt  ko100.txt  nl1.txt  prjcreate.d  pt1.txt  req-1.xml  req-dbg.xml  res-ext.xml  res-int.xml  res.txt  res1.xml  resp-ext.xml  resp-int.xml  result-1.xml  ru1.txt  t.xml  (+7 more)
dub/p1/: p1.d
elk/: .gitignore  ls.conf  p.bat
elk/4737/: ls.conf
elk/4737-p/: 1.out  ls.conf  p.bat
elk/general/: ls.conf
es/agg/: agg.bat  agg.json  agg_document.json  agg_percolator.json  agg_sentence.json  agg_verbatim.json  get-docs.bat  get-mapping.bat  get-sent.bat  m.json  resp_percolator.json  resp_percolator_1.json  vars.bat
es/bulk/: bulk-2.json  bulk.bat  vars.bat
es/count/: cnt.bat  vars.bat
es/delete/: del-doc-by-id.bat  vars.bat
es/get/: get-doc-by-id.bat  vars.bat
es/hello/: hello.bat
es/hot/: hot-threads.bat
es/lock/: lock_write.bat  lock_write.json  unlock1.json  unlock_write.bat  unlock_write.json  vars.bat
es/map1/: map1.bat
es/mapping/: get-mapping.bat  map-1900859.json  map-custom.json  put-mapping.bat  vars.bat
es/migrate/: migrate.bat  switch.bat  vars.bat
es/migrate-plugin/: migrate-plugin.bat  vars.bat
es/mon/: mon-t.bat  mon.bat  vars.bat
es/node-stat/: cit5-short.json  cit5-stats.json  cit5.json  node-stat.bat  nodes-stats.json  u3.json  u3stat.json  vars.bat  wb1.txt
es/optimize/: optimize.bat  vars.bat
es/put/: doc-999999.json  doc1.json  doc999999.json  put-doc-by-id.bat  vars.bat
es/q-doc-verb-sent/: q_id_docs.bat  vars.bat
es/q-id-doc/: doc-ids.txt  q_id_document.mustache  vars.bat
es/q-nat-id/: nat-ids.txt  q-nat-id.bat  q-nat-id.mustache
es/query/: idxsrcquery.bat  idxsrcquery.json  q1.json  q_id_document.bat  q_id_document.json  q_natural_id.json  (+4 more)
gra/: .gitignore  curpath.txt
java/: Greet.java
mongo/: scrap1.mongo
pwsh/: a.ps1  l-unix.ps1
py/: .gitignore
r/: a.r  rim-mem-analyzer.r  rim-mem-grouped-analyzer.r
sar/: i5.sar
sbt/: .gitignore
vagrant/: .gitignore
(+2107 files in other folders)
