name:                husk
version:             0.1.0.0
cabal-version:       >= 1.10
synopsis:            husk synopsis 
description:         husk descr
license:             BSD3
-- license-file:        LICENSE
author:              Igor Goncharenko
-- maintainer:          
-- copyright:           
-- category:            
build-type:          Simple
cabal-version:       >=1.10

flag documentation
    default: True
    -- False
    -- cabal install -fdocumentation or cabal install --flags=documentation.
    -- cabal haddock --hyperlink-source

library
    default-language:    Haskell2010
    ghc-options:         -O2 -Wall
    hs-source-dirs:      library
    build-depends:
        base         == 4.6.*
    if flag(documentation)
        build-depends:   hscolour == 1.20.*
    exposed-modules:
        Husk

executable husk
    default-language: Haskell2010
    build-depends:    base, husk
    hs-source-dirs:   executable
    main-is:          Main.hs

test-suite hspec
    default-language: Haskell2010
    build-depends:    base, husk, hspec == 1.8.*, statistics == 0.10.*
    hs-source-dirs:   test-suite
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    -- ghc-options:      -fhpc
    -- hs-source-dirs:   test-suite library
    -- other-modules:    Husk, HuskSpec

test-suite doctest
    default-language: Haskell2010
    build-depends:    base, doctest == 0.9.*, Glob == 0.7.*, statistics == 0.10.*
    hs-source-dirs:   test-suite
    main-is:          DocTest.hs
    type:             exitcode-stdio-1.0

test-suite hlint
    default-language: Haskell2010
    build-depends:    base, hlint == 1.8.*
    hs-source-dirs:   test-suite
    main-is:          HLint.hs
    type:             exitcode-stdio-1.0

benchmark criterion
    default-language: Haskell2010
    build-depends:    base, husk, criterion == 0.6.*, statistics == 0.10.*
    hs-source-dirs:   benchmark
    main-is:          Bench.hs
    type:             exitcode-stdio-1.0
    --build-depends:    base, husk, criterion == 0.8.*

