name:                trace
version:             0.1.0.0
synopsis:            pipes tracer 
description:         pipes tracer description
license:             BSD3
author:              Igor Goncharenko
build-type:          Simple
cabal-version:       >=1.10

executable pipes-trace
    default-language:    Haskell2010
    ghc-options:         -O2 -Wall
    hs-source-dirs:      src
    main-is:             Main.hs
    build-depends:
        base        == 4.6.*,
        pipes       ==4.1.*
