[package]
name = "clb"
version = "0.1.0"
authors = ["Ihar Hancharenka <iigoncharenko@gmail.com>"]
edition = "2018"

[dependencies]
error-chain = "0.12.0"
durations = "0.1.1"
docopt = "1.0.2"
handlebars = "1.1.0"
serde = "1.0.82"
serde_derive = "1.0.82"
xml-rs = "0.8.0"
crossbeam-channel = "0.3.3"
reqwest = "0.9.5"
